# NN_libtorch

./: .gitignore  CMakeLists.txt  LICENSE  README.md
data/: README.md
include/: Architecture.hpp  Augmentation.hpp  Backbone.hpp  Dataset.hpp  Model.hpp  Trainer.hpp  Trainer.tpp  utils.hpp
model/: mnist_classifier.pth  mnist_convnext.pth
src/: Architecture.cpp  Augmentation.cpp  Backbone.cpp  Dataset.cpp  Model.cpp  main.cpp  utils.cpp
